tests/syntax_errors/bad_statement.snl
program badStatement
begin
    + 1;
    write(1)
end.
